src/objects/BMCServiceDesk__Priority__c.object
<CustomObject>
    <description>This object allows you to store data for priority records.</description>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting from RF Priority Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Priority Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKImpact</label>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>Priorities</relationshipLabel>
        <relationshipName>Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKUrgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Priorities</relationshipLabel>
        <relationshipName>Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__description__c</fullName>
        <inlineHelpText>Use this field to enter a description of the priority. The description should indicate the importance of the record assigned with the priority.</inlineHelpText>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__enableAssignTo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to calculate the due date by using the time zone of the assigned staff member.</inlineHelpText>
        <label>Enable Assign To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__impact_Id__c</fullName>
        <formula>BMCServiceDesk__FKImpact__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the level of impact that is associated with all records that are assigned with the current priority.</inlineHelpText>
        <label>Impact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the priority record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__priorityDuration__c</fullName>
        <inlineHelpText>Use this field to enter the amount of time that must be used to calculate the due date for the record assigned with the current priority. The value must be typed in this format: HH:MM.</inlineHelpText>
        <label>Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__recommendedFixDuration__c</fullName>
        <label>Recommended Fix Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__responseDuration__c</fullName>
        <label>Response Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__urgency_Id__c</fullName>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the speed of response that is associated with all records that are assigned with the current priority.</inlineHelpText>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <label>Priority</label>
    <listViews>
        <fullName>Active_Priorities</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__description__c</columns>
        <columns>BMCServiceDesk__FKImpact__c</columns>
        <columns>BMCServiceDesk__FKUrgency__c</columns>
        <columns>BMCServiceDesk__priorityDuration__c</columns>
        <columns>BMCServiceDesk__inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active Priorities</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__description__c</columns>
        <columns>BMCServiceDesk__FKImpact__c</columns>
        <columns>BMCServiceDesk__FKUrgency__c</columns>
        <columns>BMCServiceDesk__priorityDuration__c</columns>
        <columns>BMCServiceDesk__inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Priority</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__aPriorityID_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OR(ISBLANK(Name), ISNULL(Name)), NOT(ISNUMBER(Name)))</errorConditionFormula>
        <errorMessage>Please enter a numeric value in the Priority field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__bDescription_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISBLANK(BMCServiceDesk__description__c) , ISNULL(BMCServiceDesk__description__c) )</errorConditionFormula>
        <errorMessage>Please enter Description.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__cImpact_ID_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISBLANK( BMCServiceDesk__impact_Id__c ) , ISNULL( BMCServiceDesk__impact_Id__c ) )</errorConditionFormula>
        <errorMessage>Please enter Impact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__dUrgency_ID_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISBLANK( BMCServiceDesk__urgency_Id__c) , ISNULL( BMCServiceDesk__urgency_Id__c ) )</errorConditionFormula>
        <errorMessage>Please enter Urgency.</errorMessage>
    </validationRules>
</CustomObject>